--- a/assets/index-Q-Fe7Rqp.css
+++ b/assets/index-Q-Fe7Rqp.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";.table[data-v-94d4d22a]{font-size:.9rem}.list-group-item[data-v-94d4d22a]{cursor:default}.font-monospace[data-v-860cdd7c]{font-family:monospace}/*!
+@charset "UTF-8";.table[data-v-221087ba]{font-size:.9rem}.font-monospace[data-v-860cdd7c]{font-family:monospace}/*!
  * Bootstrap  v5.3.8 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
